<resources>
    <string name="app_name">Genshin\nКвиз</string>
    <string name="start">Начать</string>
    <string name="back">Назад</string>
    <string name="txtcontinue">Продолжить</string>
    <string name="descriptionfalse">Описание игры\nочень интересная игра \nчестное слово\nне пожалеете\nпоиграйте пожалуйста.</string>
    <string name="description">Выберите карту героя, у которого день рождения проходит раньше.</string>
    <string name="descriptionFinish">Поздравляем - уровень пройден!</string>
    <string name="page1">Игра-Квиз</string>
    <string name="page2">Конструктор</string>
    <string name="page3">Калькулятор</string>

    <string name="level">Уровень: </string>
    <string name="level1">Уровень: 1</string>
    <string name="level2">Уровень: 2</string>
    <string name="level3">Уровень: 3</string>
    <string name="level4">Уровень: 4</string>
    <string name="level5">Уровень: 5</string>
    <string name="level6">Уровень: 6</string>
    <string name="level7">Уровень: 7</string>
    <string name="level8">Уровень: 8</string>
    <string name="level9">Уровень: 9</string>
    <string name="level10">Уровень: 10</string>
    <string name="level11">Уровень: 11</string>
    <string name="level12">Уровень: 12</string>
    <string name="level13">Уровень: 13</string>
    <string name="level14">Уровень: 14</string>
    <string name="level15">Уровень: 15</string>
    <string name="level16">Уровень: 16</string>
    <string name="level17">Уровень: 17</string>
    <string name="level18">Уровень: 18</string>
    <string name="level19">Уровень: 19</string>
    <string name="level20">Уровень: 20</string>

    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="_10">10</string>
    <string name="_11">11</string>
    <string name="_12">12</string>
    <string name="_13">13</string>
    <string name="_14">14</string>
    <string name="_15">15</string>
    <string name="_16">16</string>
    <string name="_17">17</string>
    <string name="_18">18</string>
    <string name="_19">19</string>
    <string name="_20">20</string>
    <string name="todo">TODO</string>
</resources>