<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/RelativeLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:orientation="vertical">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/pic_background_1"
        android:contentDescription="@string/todo" />

    <LinearLayout
        android:id="@+id/container1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/container2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">

            <LinearLayout
                android:id="@+id/container3"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/buttonBack"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/back"

                    android:background="@drawable/button_system"
                    android:minWidth="100dp"
                    android:minHeight="48dp"
                    android:padding="10dp"
                    android:textColor="@color/black95"
                    android:textSize="24sp"
                    android:textAllCaps="false" />

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/page1"
                    android:textColor="@color/white"
                    android:shadowDx="3"
                    android:shadowDy="5"
                    android:shadowRadius="1"
                    android:shadowColor="@color/black95"
                    android:textStyle="bold"
                    android:textSize="30sp"
                    android:textAllCaps="false"
                    android:gravity="end"
                    />
            </LinearLayout>

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp">

                <LinearLayout
                    android:id="@+id/container4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    >

                    <LinearLayout
                        android:id="@+id/line1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:layout_marginBottom="5dp"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/textView1"
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:layout_marginEnd="10dp"
                            android:background="@drawable/button_gamelevels"
                            android:gravity="center"

                            android:padding="10dp"
                            android:text="@string/_1"
                            android:textColor="@color/black95"
                            android:textSize="24sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/textView2"
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:layout_marginEnd="10dp"
                            android:background="@drawable/button_gamelevels"
                            android:gravity="center"

                            android:padding="10dp"
                            android:text="@string/_2"
                            android:textColor="@color/black95"
                            android:textSize="24sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/textView3"
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:layout_marginEnd="10dp"
                            android:background="@drawable/button_gamelevels"
                            android:gravity="center"

                            android:padding="10dp"
                            android:text="@string/_3"
                            android:textColor="@color/black95"
                            android:textSize="24sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/textView4"
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:layout_marginEnd="10dp"
                            android:background="@drawable/button_gamelevels"
                            android:gravity="center"

                            android:padding="10dp"
                            android:text="@string/_4"
                            android:textColor="@color/black95"
                            android:textSize="24sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/textView5"
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:layout_marginEnd="10dp"
                            android:background="@drawable/button_gamelevels"
                            android:gravity="center"

                            android:padding="10dp"
                            android:text="@string/_5"
                            android:textColor="@color/black95"
                            android:textSize="24sp"
                            android:textStyle="bold" />

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/line2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_marginTop="5dp"
                        android:layout_marginBottom="5dp">

                        <TextView
                            android:id="@+id/textView6"
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:text="@string/_6"
                            android:layout_marginEnd="10dp"
                            android:background="@drawable/button_gamelevels"

                            android:padding="10dp"
                            android:textColor="@color/black95"
                            android:textSize="24sp"
                            android:textStyle="bold"
                            android:gravity="center"
                            />

                        <TextView
                            android:id="@+id/textView7"
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:layout_marginEnd="10dp"
                            android:background="@drawable/button_gamelevels"
                            android:gravity="center"

                            android:padding="10dp"
                            android:text="@string/_7"
                            android:textColor="@color/black95"
                            android:textSize="24sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/textView8"
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:text="@string/_8"
                            android:layout_marginEnd="10dp"
                            android:background="@drawable/button_gamelevels"

                            android:padding="10dp"
                            android:textColor="@color/black95"
                            android:textSize="24sp"
                            android:textStyle="bold"
                            android:gravity="center"
                            />

                        <TextView
                            android:id="@+id/textView9"
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:text="@string/_9"
                            android:layout_marginEnd="10dp"
                            android:background="@drawable/button_gamelevels"

                            android:padding="10dp"
                            android:textColor="@color/black95"
                            android:textSize="24sp"
                            android:textStyle="bold"
                            android:gravity="center"
                            />

                        <TextView
                            android:id="@+id/textView10"
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:text="@string/_10"
                            android:layout_marginEnd="10dp"
                            android:background="@drawable/button_gamelevels"

                            android:padding="10dp"
                            android:textColor="@color/black95"
                            android:textSize="24sp"
                            android:textStyle="bold"
                            android:gravity="center"
                            />

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/line3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_marginTop="5dp"
                        android:layout_marginBottom="5dp">

                        <TextView
                            android:id="@+id/textView11"
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:text="@string/_11"
                            android:layout_marginEnd="10dp"
                            android:background="@drawable/button_gamelevels"

                            android:padding="10dp"
                            android:textColor="@color/black95"
                            android:textSize="24sp"
                            android:textStyle="bold"
                            android:gravity="center"
                            />

                        <TextView
                            android:id="@+id/textView12"
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:text="@string/_12"
                            android:layout_marginEnd="10dp"
                            android:background="@drawable/button_gamelevels"

                            android:padding="10dp"
                            android:textColor="@color/black95"
                            android:textSize="24sp"
                            android:textStyle="bold"
                            android:gravity="center"
                            />

                        <TextView
                            android:id="@+id/textView13"
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:text="@string/_13"
                            android:layout_marginEnd="10dp"
                            android:background="@drawable/button_gamelevels"

                            android:padding="10dp"
                            android:textColor="@color/black95"
                            android:textSize="24sp"
                            android:textStyle="bold"
                            android:gravity="center"
                            />

                        <TextView
                            android:id="@+id/textView14"
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:text="@string/_14"
                            android:layout_marginEnd="10dp"
                            android:background="@drawable/button_gamelevels"

                            android:padding="10dp"
                            android:textColor="@color/black95"
                            android:textSize="24sp"
                            android:textStyle="bold"
                            android:gravity="center"
                            />

                        <TextView
                            android:id="@+id/textView15"
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:text="@string/_15"
                            android:layout_marginEnd="10dp"
                            android:background="@drawable/button_gamelevels"

                            android:padding="10dp"
                            android:textColor="@color/black95"
                            android:textSize="24sp"
                            android:textStyle="bold"
                            android:gravity="center"
                            />

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/line4"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_marginTop="5dp"
                        android:layout_marginBottom="5dp">

                        <TextView
                            android:id="@+id/textView16"
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:text="@string/_16"
                            android:layout_marginEnd="10dp"
                            android:background="@drawable/button_gamelevels"

                            android:padding="10dp"
                            android:textColor="@color/black95"
                            android:textSize="24sp"
                            android:textStyle="bold"
                            android:gravity="center"
                            />

                        <TextView
                            android:id="@+id/textView17"
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:text="@string/_17"
                            android:layout_marginEnd="10dp"
                            android:background="@drawable/button_gamelevels"

                            android:padding="10dp"
                            android:textColor="@color/black95"
                            android:textSize="24sp"
                            android:textStyle="bold"
                            android:gravity="center"
                            />

                        <TextView
                            android:id="@+id/textView18"
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:text="@string/_18"
                            android:layout_marginEnd="10dp"
                            android:background="@drawable/button_gamelevels"

                            android:padding="10dp"
                            android:textColor="@color/black95"
                            android:textSize="24sp"
                            android:textStyle="bold"
                            android:gravity="center"
                            />

                        <TextView
                            android:id="@+id/textView19"
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:text="@string/_19"
                            android:layout_marginEnd="10dp"
                            android:background="@drawable/button_gamelevels"

                            android:padding="10dp"
                            android:textColor="@color/black95"
                            android:textSize="24sp"
                            android:textStyle="bold"
                            android:gravity="center"
                            />

                        <TextView
                            android:id="@+id/textView20"
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:text="@string/_20"
                            android:layout_marginEnd="10dp"
                            android:background="@drawable/button_gamelevels"

                            android:padding="10dp"
                            android:textColor="@color/black95"
                            android:textSize="24sp"
                            android:textStyle="bold"
                            android:gravity="center"
                            />

                    </LinearLayout>

                </LinearLayout>
            </ScrollView>
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>